--- a/conf/client1.yaml
+++ b/conf/client1.yaml
@@ -2,7 +2,7 @@ workdir: ./storage
 mode: client
 
 node:
-  name: Client2
+  name: Client1
   healthcheck: 120.0
   heartbeat: 10.0
 
@@ -12,7 +12,7 @@ node:
 
 join:
   first: False
-  url: http://localhost:1456
+  url: http://server:1456
 
 datasources:
   - name: CIFAR-10
